Fix violations of OpenRewrite rule: org.openrewrite.java.migrate.util.SequencedCollection.